styles/global.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Inter', sans-serif;
  overflow-x: hidden;
}

:root {
  --background-primary: #F4F5FB;
  --background-secondary: #FFFFFF;

  --color-brand: #CA3884;
  --color-brand-hover: #A52C6B;
  --color-danger: #C93847;

  --content-primary: #080B12;
  --content-secondary: #374151;
  --content-tertiary: #9CA3AF;

  --border-primary: #D1D5DB;
  --border-hover: #B9C2D0;

  --title: 700 1.5rem/1.34;
  --label: 600 1rem/1.25rem;
  --paragraph: 500 1rem/1.25rem;
  --link: 500 0.875rem 1rem/1.15;
}

body {
  background-color: var(--background-primary);
}

h1 {
  font: var(title);
}

#logo{
  margin-top: 1.5rem;
  margin-bottom: 4rem;
  display: flex;
  align-items: center;
  justify-content: center;
}

.container {
  display: flex;
  flex-direction: column;
  max-width: 50rem;
  width: 100%;
  justify-self: center;

  gap: 1rem;
  padding: 1.5rem ;
}



header a {
  font: var(--link);
  color: var(--color-brand);
  text-decoration: none;
  
  &:hover {
    color: var(--color-brand-hover);
    border-bottom: 1px solid var(--color-brand-hover);
  }
}

form {
  margin-top: 2.75rem;
  display: flex;
  width: 100%;
  gap: 1rem;
}

@media (width <= 80em) {
  #logo {
    display: none;
  }
  .container {
    padding: 2rem;
  }

  form {
    flex-direction: column;
    
    & input {
      height: 2.75rem;
    }
    .btn {
      max-width: 100%;
    }
  }
}

